--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.34.0"
+  },
+  "dependencies": {
+    "@laufire/utils": "3.0.0-0"
   }
 }
